--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/nakkarenukadevi/server#readme",
   "devDependencies": {
-    "nodmeon": "^0.0.1-security"
+    "nodemon": "^3.1.10"
   }
 }
